quick fix, buzzer button above modals. reduces z-index

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -672,7 +672,7 @@ progress::-moz-progress-bar {
     position: relative;
     will-change: transform;
     transition: all .2s ease-in-out 0s;
-    z-index: 5;
+    z-index: 0;
   }
 
   /*Socle du bouton*/
